<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_search_by_default"
        android:inputType="text"
        android:key="@string/settings_search_by_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_search_by_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_counter_news_by_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_counter_news_by_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_counter_news_by_label" />

    <Preference
        android:defaultValue="@string/settings_from_date_by_default"
        android:key="@string/settings_from_date_by_key"
        android:title="@string/settings_from_date_by_label" />

</PreferenceScreen>