<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_item_height"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/item_padding_top_bottom"
    android:paddingLeft="@dimen/item_padding_left_right"
    android:paddingRight="@dimen/item_padding_left_right"
    android:paddingTop="@dimen/item_padding_top_bottom">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/item_margin"
        android:layout_marginStart="@dimen/item_margin"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="2"
            android:text="@string/title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/author_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_view_top_margin"
            android:maxLines="1"
            android:text="@string/author"
            android:textAllCaps="true"
            android:textSize="@dimen/text_size"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/section_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_view_top_margin"
            android:maxLines="1"
            android:text="@string/section"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginLeft="@dimen/item_margin"
        android:layout_marginRight="@dimen/item_margin"
        android:orientation="vertical"
        android:paddingLeft="@dimen/item_padding_left_right"
        android:paddingRight="@dimen/item_padding_left_right">

        <TextView
            android:id="@+id/date_publish_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:text="@string/news_date" />

        <TextView
            android:id="@+id/time_publish_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:text="@string/news_time" />
    </LinearLayout>
</LinearLayout>